Package_Tools/include-C/libnm/in_arbeit/h/nm_client.h

#define __NM_CLIENT_H__
/**
 * NMClientInstanceFlags:
 * @NM_CLIENT_INSTANCE_FLAGS_NONE: special value to indicate no flags.
 * @NM_CLIENT_INSTANCE_FLAGS_NO_AUTO_FETCH_PERMISSIONS: by default, NMClient
 *   will fetch the permissions via "GetPermissions" and refetch them when
 *   "CheckPermissions" signal gets received. By setting this flag, this behavior
 *   can be disabled. You can toggle this flag to enable and disable automatic
 *   fetching of the permissions. Watch also nm_client_get_permissions_state()
 *   to know whether the permissions are up to date.
 * @NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_GOOD: as #NMClient is an GInitable
 *   and GAsyncInitable, nm_client_get_instance_flags() returns this flag
 *   once initialization completed with success. This flag cannot be set
 *   as NM_CLIENT_INSTANCE_FLAGS property. Since: 1.42.
 * @NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_BAD: like @NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_GOOD
 *   indicates that the instance completed initialization with failure. In that
 *   case the instance is unusable. Since: 1.42.
 *
 * Since: 1.24
 */
typedef enum /*< flags >*/ {
    NM_CLIENT_INSTANCE_FLAGS_NONE                      = 0,
    NM_CLIENT_INSTANCE_FLAGS_NO_AUTO_FETCH_PERMISSIONS = 0x1,
    NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_GOOD          = 0x2,
    NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_BAD           = 0x4,
} NMClientInstanceFlags;
#define NM_TYPE_CLIENT            (nm_client_get_type())
#define NM_CLIENT(obj)            (G_TYPE_CHECK_INSTANCE_CAST((obj), NM_TYPE_CLIENT, NMClient))
#define NM_CLIENT_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST((klass), NM_TYPE_CLIENT, NMClientClass))
#define NM_IS_CLIENT(obj)         (G_TYPE_CHECK_INSTANCE_TYPE((obj), NM_TYPE_CLIENT))
#define NM_IS_CLIENT_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE((klass), NM_TYPE_CLIENT))
#define NM_CLIENT_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS((obj), NM_TYPE_CLIENT, NMClientClass))
#define NM_CLIENT_VERSION         "version"
#define NM_CLIENT_VERSION_INFO    "version-info"
#define NM_CLIENT_STATE           "state"
#define NM_CLIENT_STARTUP         "startup"
#define NM_CLIENT_NM_RUNNING      "nm-running"
#define NM_CLIENT_DBUS_CONNECTION "dbus-connection"
#define NM_CLIENT_DBUS_NAME_OWNER "dbus-name-owner"
#define NM_CLIENT_INSTANCE_FLAGS  "instance-flags"
//xxxxxGLIB_DEPRECATED_IN_SYNC_WRITABLE_PROPERTY
#define NM_CLIENT_NETWORKING_ENABLED "networking-enabled"
//xxxxxGLIB_DEPRECATED_IN_SYNC_WRITABLE_PROPERTY
#define NM_CLIENT_WIRELESS_ENABLED "wireless-enabled"
//xxxxxGLIB_DEPRECATED_IN_SYNC_WRITABLE_PROPERTY
#define NM_CLIENT_WWAN_ENABLED "wwan-enabled"
//xxxxxGLIB_DEPRECATED_IN_SYNC_WRITABLE_PROPERTY
#define NM_CLIENT_WIMAX_ENABLED "wimax-enabled"
#define NM_CLIENT_WIRELESS_HARDWARE_ENABLED "wireless-hardware-enabled"
#define NM_CLIENT_WWAN_HARDWARE_ENABLED     "wwan-hardware-enabled"
#define NM_CLIENT_WIMAX_HARDWARE_ENABLED    "wimax-hardware-enabled"
#define NM_CLIENT_RADIO_FLAGS "radio-flags"
#define NM_CLIENT_ACTIVE_CONNECTIONS           "active-connections"
#define NM_CLIENT_CONNECTIVITY                 "connectivity"
#define NM_CLIENT_CONNECTIVITY_CHECK_URI       "connectivity-check-uri"
#define NM_CLIENT_CONNECTIVITY_CHECK_AVAILABLE "connectivity-check-available"
//xxxxxGLIB_DEPRECATED_IN_SYNC_WRITABLE_PROPERTY
#define NM_CLIENT_CONNECTIVITY_CHECK_ENABLED "connectivity-check-enabled"
#define NM_CLIENT_PRIMARY_CONNECTION    "primary-connection"
#define NM_CLIENT_ACTIVATING_CONNECTION "activating-connection"
#define NM_CLIENT_DEVICES               "devices"
#define NM_CLIENT_ALL_DEVICES           "all-devices"
#define NM_CLIENT_CONNECTIONS           "connections"
#define NM_CLIENT_HOSTNAME              "hostname"
#define NM_CLIENT_CAN_MODIFY            "can-modify"
#define NM_CLIENT_METERED               "metered"
#define NM_CLIENT_DNS_MODE              "dns-mode"
#define NM_CLIENT_DNS_RC_MANAGER        "dns-rc-manager"
#define NM_CLIENT_DNS_CONFIGURATION     "dns-configuration"
#define NM_CLIENT_CHECKPOINTS           "checkpoints"
#define NM_CLIENT_CAPABILITIES          "capabilities"
#define NM_CLIENT_PERMISSIONS_STATE     "permissions-state"
#define NM_CLIENT_DEVICE_ADDED              "device-added"
#define NM_CLIENT_DEVICE_REMOVED            "device-removed"
#define NM_CLIENT_ANY_DEVICE_ADDED          "any-device-added"
#define NM_CLIENT_ANY_DEVICE_REMOVED        "any-device-removed"
#define NM_CLIENT_PERMISSION_CHANGED        "permission-changed"
#define NM_CLIENT_CONNECTION_ADDED          "connection-added"
#define NM_CLIENT_CONNECTION_REMOVED        "connection-removed"
#define NM_CLIENT_ACTIVE_CONNECTION_ADDED   "active-connection-added"
#define NM_CLIENT_ACTIVE_CONNECTION_REMOVED "active-connection-removed"
/**
 * NMClientError:
 * @NM_CLIENT_ERROR_FAILED: unknown or unclassified error
 * @NM_CLIENT_ERROR_MANAGER_NOT_RUNNING: an operation that requires NetworkManager
 *   failed because NetworkManager is not running
 * @NM_CLIENT_ERROR_OBJECT_CREATION_FAILED: NetworkManager claimed that an
 *   operation succeeded, but the object that was allegedly created (eg,
 *   #NMRemoteConnection, #NMActiveConnection) was apparently destroyed before
 *   #NMClient could create a representation of it.
 *
 * Describes errors that may result from operations involving a #NMClient.
 *
 * D-Bus operations may also return errors from other domains, including
 * #NMManagerError, #NMSettingsError, #NMAgentManagerError, and #NMConnectionError.
 **/
typedef enum {
    NM_CLIENT_ERROR_FAILED = 0,
    NM_CLIENT_ERROR_MANAGER_NOT_RUNNING,
    NM_CLIENT_ERROR_OBJECT_CREATION_FAILED,
} NMClientError;
#define NM_CLIENT_ERROR nm_client_error_quark()
GQuark nm_client_error_quark(void);
/* DNS stuff */

/**
 * NMDnsEntry:
 *
 * Since: 1.6
 */
typedef struct _NMDnsEntry NMDnsEntry;
extern
GType nm_dns_entry_get_type(void);
extern
void nm_dns_entry_unref(NMDnsEntry *entry);
extern
const char *nm_dns_entry_get_interface(NMDnsEntry *entry);
extern
const char *const *nm_dns_entry_get_nameservers(NMDnsEntry *entry);
extern
const char *const *nm_dns_entry_get_domains(NMDnsEntry *entry);
extern
int nm_dns_entry_get_priority(NMDnsEntry *entry);
extern
gboolean nm_dns_entry_get_vpn(NMDnsEntry *entry);
/**
 * NMClient:
 *
 * NMClient contains a cache of the objects of NetworkManager's D-Bus API.
 * It uses #GMainContext and #GDBusConnection for that and registers to
 * D-Bus signals. That means, when iterating the associated #GMainContext,
 * D-Bus signals gets processed and the #NMClient instance updates and
 * emits #GObject signals.
 */
typedef struct _NMClient      NMClient;
typedef struct _NMClientClass NMClientClass;
extern
NMClientInstanceFlags nm_client_get_instance_flags(NMClient *self);
extern
NMTernary nm_client_get_permissions_state(NMClient *self);