Package_Tools/include-C/libnm/in_arbeit/pp/nm-client.pp


unit nm-client;
interface

{
  Automatically converted by H2Pas 1.0.0 from nm-client.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    nm-client.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
Pchar  = ^char;
PGAsyncResult  = ^GAsyncResult;
Pgboolean  = ^gboolean;
PGCancellable  = ^GCancellable;
PGDBusConnection  = ^GDBusConnection;
PGError  = ^GError;
PGHashTable  = ^GHashTable;
PGMainContext  = ^GMainContext;
PGObject  = ^GObject;
PGPtrArray  = ^GPtrArray;
Pgsize  = ^gsize;
Pguint32  = ^guint32;
PGVariant  = ^GVariant;
PGVariantType  = ^GVariantType;
PNMActiveConnection  = ^NMActiveConnection;
PNMCheckpoint  = ^NMCheckpoint;
PNMClient  = ^NMClient;
PNMClientError  = ^NMClientError;
PNMClientInstanceFlags  = ^NMClientInstanceFlags;
PNMConnection  = ^NMConnection;
PNMDevice  = ^NMDevice;
PNMDnsEntry  = ^NMDnsEntry;
PNMObject  = ^NMObject;
PNMRemoteConnection  = ^NMRemoteConnection;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{ SPDX-License-Identifier: LGPL-2.1-or-later  }
{
 * Copyright (C) 2007 - 2008 Novell, Inc.
 * Copyright (C) 2007 - 2014 Red Hat, Inc.
  }
{$ifndef __NM_CLIENT_H__}
{$define __NM_CLIENT_H__}
{$if !defined(__NETWORKMANAGER_H_INSIDE__) && !defined(NETWORKMANAGER_COMPILATION)}
{$error "Only <NetworkManager.h> can be included directly."}
{$endif}
{*
 * NMClientInstanceFlags:
 * @NM_CLIENT_INSTANCE_FLAGS_NONE: special value to indicate no flags.
 * @NM_CLIENT_INSTANCE_FLAGS_NO_AUTO_FETCH_PERMISSIONS: by default, NMClient
 *   will fetch the permissions via "GetPermissions" and refetch them when
 *   "CheckPermissions" signal gets received. By setting this flag, this behavior
 *   can be disabled. You can toggle this flag to enable and disable automatic
 *   fetching of the permissions. Watch also nm_client_get_permissions_state()
 *   to know whether the permissions are up to date.
 * @NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_GOOD: as #NMClient is an GInitable
 *   and GAsyncInitable, nm_client_get_instance_flags() returns this flag
 *   once initialization completed with success. This flag cannot be set
 *   as NM_CLIENT_INSTANCE_FLAGS property. Since: 1.42.
 * @NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_BAD: like @NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_GOOD
 *   indicates that the instance completed initialization with failure. In that
 *   case the instance is unusable. Since: 1.42.
 *
 * Since: 1.24
  }
{< flags > }type
  PNMClientInstanceFlags = ^TNMClientInstanceFlags;
  TNMClientInstanceFlags =  Longint;
  Const
    NM_CLIENT_INSTANCE_FLAGS_NONE = 0;
    NM_CLIENT_INSTANCE_FLAGS_NO_AUTO_FETCH_PERMISSIONS = $1;
    NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_GOOD = $2;
    NM_CLIENT_INSTANCE_FLAGS_INITIALIZED_BAD = $4;
;

{ was #define dname def_expr }
function NM_TYPE_CLIENT : longint; { return type might be wrong }

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_CLIENT(obj : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_CLIENT_CLASS(klass : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_IS_CLIENT(obj : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_IS_CLIENT_CLASS(klass : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_CLIENT_GET_CLASS(obj : longint) : longint;

const
  NM_CLIENT_VERSION = 'version';  
  NM_CLIENT_VERSION_INFO = 'version-info';  
  NM_CLIENT_STATE = 'state';  
  NM_CLIENT_STARTUP = 'startup';  
  NM_CLIENT_NM_RUNNING = 'nm-running';  
  NM_CLIENT_DBUS_CONNECTION = 'dbus-connection';  
  NM_CLIENT_DBUS_NAME_OWNER = 'dbus-name-owner';  
  NM_CLIENT_INSTANCE_FLAGS = 'instance-flags';  
{//xxxx _NM_DEPRECATED_SYNC_WRITABLE_PROPERTY }
  NM_CLIENT_NETWORKING_ENABLED = 'networking-enabled';  
{//xxxx _NM_DEPRECATED_SYNC_WRITABLE_PROPERTY }
  NM_CLIENT_WIRELESS_ENABLED = 'wireless-enabled';  
{//xxxx _NM_DEPRECATED_SYNC_WRITABLE_PROPERTY }
  NM_CLIENT_WWAN_ENABLED = 'wwan-enabled';  
{//xxxx _NM_DEPRECATED_SYNC_WRITABLE_PROPERTY }
  NM_CLIENT_WIMAX_ENABLED = 'wimax-enabled';  
  NM_CLIENT_WIRELESS_HARDWARE_ENABLED = 'wireless-hardware-enabled';  
  NM_CLIENT_WWAN_HARDWARE_ENABLED = 'wwan-hardware-enabled';  
  NM_CLIENT_WIMAX_HARDWARE_ENABLED = 'wimax-hardware-enabled';  
  NM_CLIENT_RADIO_FLAGS = 'radio-flags';  
  NM_CLIENT_ACTIVE_CONNECTIONS = 'active-connections';  
  NM_CLIENT_CONNECTIVITY = 'connectivity';  
  NM_CLIENT_CONNECTIVITY_CHECK_URI = 'connectivity-check-uri';  
  NM_CLIENT_CONNECTIVITY_CHECK_AVAILABLE = 'connectivity-check-available';  
{//xxxx _NM_DEPRECATED_SYNC_WRITABLE_PROPERTY }
  NM_CLIENT_CONNECTIVITY_CHECK_ENABLED = 'connectivity-check-enabled';  
  NM_CLIENT_PRIMARY_CONNECTION = 'primary-connection';  
  NM_CLIENT_ACTIVATING_CONNECTION = 'activating-connection';  
  NM_CLIENT_DEVICES = 'devices';  
  NM_CLIENT_ALL_DEVICES = 'all-devices';  
  NM_CLIENT_CONNECTIONS = 'connections';  
  NM_CLIENT_HOSTNAME = 'hostname';  
  NM_CLIENT_CAN_MODIFY = 'can-modify';  
  NM_CLIENT_METERED = 'metered';  
  NM_CLIENT_DNS_MODE = 'dns-mode';  
  NM_CLIENT_DNS_RC_MANAGER = 'dns-rc-manager';  
  NM_CLIENT_DNS_CONFIGURATION = 'dns-configuration';  
  NM_CLIENT_CHECKPOINTS = 'checkpoints';  
  NM_CLIENT_CAPABILITIES = 'capabilities';  
  NM_CLIENT_PERMISSIONS_STATE = 'permissions-state';  
  NM_CLIENT_DEVICE_ADDED = 'device-added';  
  NM_CLIENT_DEVICE_REMOVED = 'device-removed';  
  NM_CLIENT_ANY_DEVICE_ADDED = 'any-device-added';  
  NM_CLIENT_ANY_DEVICE_REMOVED = 'any-device-removed';  
  NM_CLIENT_PERMISSION_CHANGED = 'permission-changed';  
  NM_CLIENT_CONNECTION_ADDED = 'connection-added';  
  NM_CLIENT_CONNECTION_REMOVED = 'connection-removed';  
  NM_CLIENT_ACTIVE_CONNECTION_ADDED = 'active-connection-added';  
  NM_CLIENT_ACTIVE_CONNECTION_REMOVED = 'active-connection-removed';  
{*
 * NMClientError:
 * @NM_CLIENT_ERROR_FAILED: unknown or unclassified error
 * @NM_CLIENT_ERROR_MANAGER_NOT_RUNNING: an operation that requires NetworkManager
 *   failed because NetworkManager is not running
 * @NM_CLIENT_ERROR_OBJECT_CREATION_FAILED: NetworkManager claimed that an
 *   operation succeeded, but the object that was allegedly created (eg,
 *   #NMRemoteConnection, #NMActiveConnection) was apparently destroyed before
 *   #NMClient could create a representation of it.
 *
 * Describes errors that may result from operations involving a #NMClient.
 *
 * D-Bus operations may also return errors from other domains, including
 * #NMManagerError, #NMSettingsError, #NMAgentManagerError, and #NMConnectionError.
 * }
type
  PNMClientError = ^TNMClientError;
  TNMClientError =  Longint;
  Const
    NM_CLIENT_ERROR_FAILED = 0;
    NM_CLIENT_ERROR_MANAGER_NOT_RUNNING = 1;
    NM_CLIENT_ERROR_OBJECT_CREATION_FAILED = 2;
;

{ was #define dname def_expr }
function NM_CLIENT_ERROR : longint; { return type might be wrong }

function nm_client_error_quark:TGQuark;cdecl;external;
{ DNS stuff  }
{*
 * NMDnsEntry:
 *
 * Since: 1.6
  }
type

function nm_dns_entry_get_type:TGType;cdecl;external;
procedure nm_dns_entry_unref(entry:PNMDnsEntry);cdecl;external;
(* Const before type ignored *)
function nm_dns_entry_get_interface(entry:PNMDnsEntry):Pchar;cdecl;external;
(* Const before type ignored *)
(* Const before declarator ignored *)
function nm_dns_entry_get_nameservers(entry:PNMDnsEntry):^Pchar;cdecl;external;
(* Const before type ignored *)
(* Const before declarator ignored *)
function nm_dns_entry_get_domains(entry:PNMDnsEntry):^Pchar;cdecl;external;
function nm_dns_entry_get_priority(entry:PNMDnsEntry):longint;cdecl;external;
function nm_dns_entry_get_vpn(entry:PNMDnsEntry):Tgboolean;cdecl;external;
{*
 * NMClient:
 *
 * NMClient contains a cache of the objects of NetworkManager's D-Bus API.
 * It uses #GMainContext and #GDBusConnection for that and registers to
 * D-Bus signals. That means, when iterating the associated #GMainContext,
 * D-Bus signals gets processed and the #NMClient instance updates and
 * emits #GObject signals.
  }
type
